--- a/common-parts/news.txt
+++ b/common-parts/news.txt
@@ -1,14 +1,11 @@
 <h3>Ostatnio dodane</h3>
 
-<h4>Przekaż nam <img src="style/images/jeden-procent.png" heigth=30 width=30/> podatku</h4>
-<!--h5>Maj 2017</h5-->
-<p>KRS 0000414760 ...<br/><a href="aktualnosci.html#1procent">Czytaj więcej</a></p>
-<p></p>
-
-<h4>Nowa strona internetowa</h4>
-<!--h5>Maj 2017</h5-->
-<p>Nowa strona internetowa już ruszyła ...<br/><a href="aktualnosci.html#nowaStrona">Czytaj więcej</a></p>
-<p></p>
+<h4>Bal w Zamku Królewskim w Niepołomicach</h4>
+<!--h5>2017</h5-->
+<p>
+  Bal karnawałowy dla osób niepełnosprawnych...<br/>
+  <a href="aktualnosci.html#2017-bal">Czytaj więcej</a>
+</p>
 
 
 <!--h3>Useful Links</h3>
