--- a/common-parts/news.txt
+++ b/common-parts/news.txt
@@ -1,9 +1,9 @@
 <h3>Ostatnio dodane</h3>
 
-<h4>Bal w Zamku Królewskim w Niepołomicach</h4>
+<h4>Karnawał '17</h4>
 <!--h5>2017</h5-->
 <p>
-  Bal karnawałowy dla osób niepełnosprawnych...<br/>
+  Bal karnawałowy dla osób niepełnosprawnych w Zamku Królewskim...<br/>
   <a href="aktualnosci.html#2017-bal">Czytaj więcej</a>
 </p>
 
