--- a/common-parts/news.txt
+++ b/common-parts/news.txt
@@ -1,15 +1,17 @@
 <h3>Ostatnio dodane</h3>
 
+<h4>Walne Zebranie '18</h4>
+<p>
+  W sobotę 17 marca 2018 roku w Laboratorium Aktywności...<br/>
+  <a href="aktualnosci.html#2018-walne-zebranie">Czytaj więcej</a>
+</p>
+
+<br/>
+
 <h4>Bal Karnawałowy '18</h4>
 <p>
   We środę 7 lutego 2018 roku, wzorem poprzednich lat...<br/>
   <a href="aktualnosci.html#2018-bal-karnawalowy">Czytaj więcej</a>
-</p>
-
-<h4>Mikołaj '17</h4>
-<p>
-  W piątek 8 grudnia 2017 roku przyszedł do członków naszego stowarzyszenia Mikołaj...<br/>
-  <a href="aktualnosci.html#2017-mikolaj">Czytaj więcej</a>
 </p>
 
 <br/>
