--- a/common-parts/news.txt
+++ b/common-parts/news.txt
@@ -1,5 +1,13 @@
 <h3>Ostatnio dodane</h3>
 
+<h4>Turnus w Sarbinowie '18</h4>
+<p>
+  W lipcu 2018, jak co roku wybraliśmy się...<br/>
+  <a href="aktualnosci.html#2018-sarbinowo">Czytaj więcej</a>
+</p>
+
+<br/>
+
 <h4>Murzasichle '18</h4>
 <p>
   Pod koniec czerwca wyjechaliśmy na weekend do...<br/>
@@ -8,13 +16,6 @@
 
 <br/>
 
-<h4>Walne Zebranie '18</h4>
-<p>
-  W sobotę 17 marca 2018 roku w Laboratorium Aktywności...<br/>
-  <a href="aktualnosci.html#2018-walne-zebranie">Czytaj więcej</a>
-</p>
-
-<br/>
 
 
 
