--- a/common-parts/news.txt
+++ b/common-parts/news.txt
@@ -1,26 +1,18 @@
 <h3>Ostatnio dodane</h3>
 
-<h4>Turnus w Dąbkach 2021</h4>
-<p>
-  Dnia 7 sierpnia 2021 roku wyjechaliśmy, ...<br/>
-  <a href="aktualnosci.html#2021-dabki">Czytaj więcej</a>
-</p>
 
-<h4>Podsumowanie roku 2020</h4>
+<h4>Zebranie Walne</h4>
 <p>
-  Bilans, Rachunek zysków i strat, ...<br/>
-  <a href="sprawozdania.html">Czytaj więcej</a>
-</p>
-
-<h4>Ćwiczenia symulujące</h4>
-<p>
-  W dniu 10 listopada 2020 roku p. Agniszka Bochenek ...<br/>
-  <a href="aktualnosci.html#2021-cwiczenia">Czytaj więcej</a>
+  Zebranie Walne odbędzie się ...<br/>
+  <a href="aktualnosci.html#2022-walne">Czytaj więcej</a>
 </p>
 
 
-
-
+<h4>Ustronie Morskie 2022</h4>
+<p>
+  No cóż wakacje się skończyły ale ...<br/>
+  <a href="aktualnosci.html#2022-ustronie">Czytaj więcej</a>
+</p>
 
 
 
